--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
-		<h1 style="text-align: center;">Player Login for Game</h1>
+	<div>
+		<h1 style="text-align: center;">Game</h1>
+		<h2 style="text-align: center;">Player Login for Game</h2>
 		<h4 style="text-align: center;">User Name:</h4>
 		<input type="">
+		<h1 style="text-align: center;">Player Login for Game 2</h1>
+		<h4 style="text-align: center;">User Name:</h4>
+		<input type="">
+	</div>
 		
 		
 
